<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_queue">Song Queue</string>
    <string name="command">Command</string>
    <string name="use_count">Use Count</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="search"><i>Search</i></string>
    <string name="filters"><u>Filters</u></string>
    <string name="text_title">Title</string>
    <string name="text_requested_by">Requested by</string>
    <string name="text_song_queue">Song Queue</string>
    <string name="text_recently_played">Recently Played</string>
    <string name="text_request_history">Request History</string>
</resources>