<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    android:orientation="vertical"
    tools:context=".SongQueueFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_queue"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:shadowColor="@color/blue_shadow"
        android:shadowRadius="10"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle=""/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/tab_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/commandEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search"
                android:textColorHint="@color/text_hint_color"
                android:maxLines="2"
                android:maxLength="39"
                android:textCursorDrawable="@drawable/edit_text_cursor"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/search_icon"
                android:drawablePadding="10dp"
                app:backgroundTint="@color/white"/>

            <View
                android:id="@+id/clearEditText"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="20dp"
                android:background="@drawable/close_icon"
                android:visibility="gone"/>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="9"
        android:divider="@drawable/divider"
        android:background="@drawable/tab_background"
        android:showDividers="middle"
        android:gravity="center">

        <TextView
            android:id="@+id/commandTabTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:maxLines="2"
            android:text="@string/text_song_queue"
            android:layout_weight="3"
            android:gravity="center"
            android:textStyle="italic|bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:shadowColor="@color/blue_shadow"
            android:shadowDx="0"
            android:shadowRadius="10"
            android:shadowDy="0"/>

        <TextView
            android:id="@+id/useCountTabTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/text_recently_played"
            android:layout_weight="3"
            android:textStyle="italic|bold"
            android:maxLines="2"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:shadowColor="@color/blue_shadow"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"/>

        <TextView
            android:id="@+id/permissionsTabTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textStyle="italic|bold"
            android:text="@string/text_request_history"
            android:maxLines="2"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:shadowColor="@color/blue_shadow"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"/>
    </LinearLayout>

</LinearLayout>